# nv-swaptop

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  build.rs
.github/workflows/: release.yml
docs/: record.tape
src/: app.rs  cli.rs  main.rs  smoke_tests.rs
src/data/: gpu.rs  mod.rs  numa.rs  swap.rs  types.rs
src/ui/: chart.rs  gpu_view.rs  mod.rs  numa_view.rs  process_list.rs  swap_devices.rs  unified_view.rs
