[package]
name = "nv-swaptop"
version = "2.0.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["Luis Otavio <luotasss@gmail.com>"]

description = "A terminal user interface tool to monitor swap, NUMA topology, and GPU memory usage."
readme = "README.md"
repository = "https://github.com/luis-ota/swaptop"
license = "MIT"

keywords = ["swap", "monitor", "cli", "tui", "swaptop"]
categories = ["command-line-utilities", "visualization"]
homepage = "https://github.com/luis-ota/swaptop"
documentation = "https://github.com/luis-ota/swaptop"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
thiserror = "2.0.12"
crossterm = "0.29.0"
color-eyre = "0.6.3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"
proc-mounts = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
tasklist = "0.3.0"
sysinfo = "0.35.1"
winapi = { version = "0.3.9", features = ["memoryapi", "sysinfoapi", "winerror"] }
